--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "moonshine/moonshine": "2.0.0.beta.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
